# maltego

./: .gitignore  DEV.md  Readme.md  docker-compose.yml  maltego.session.sql  manage.py  pyproject.toml
apps/core/: admin.py  context_processors.py  urls.py  views.py
apps/core/management/commands/: admin.py
apps/post/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
apps/post/management/commands/: seed_post.py
apps/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_age_limit_alter_post_likes_and_more.py  0003_rename_name_chapter_chapter_count.py  0004_alter_status_options_alter_chapter_chapter_count.py  0004_post_slug.py  0005_alter_post_age_limit.py  0006_alter_post_age_limit.py  0007_rename_chapter_count_chapter_chapter_number.py
apps/user/: admin.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_userprofile_avatar.py
maltego/: asgi.py  urls.py  wsgi.py
maltego/settings/: base.py  dev.py  prod.py
static/js/: htmx.js
static/scss/: _header.scss  style.scss
templates/: index.html
templates/account/: signup.html
templates/includes/: header.html  navbar.html  pagination.html
templates/layouts/: _base.html
templates/post/: detail.html  index.html  list.html
templates/user/auth/modal/: login.html  register.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
